--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
+# Framework web
 Flask==3.0.2
+
+# Google Calendar API
 google-api-python-client==2.118.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
+
+# Manejo de fechas y zonas horarias
 pytz==2024.1
 python-dateutil==2.8.2
 tzlocal==5.2
-Flask-SQLAlchemy==3.1.1
-Flask-Login==0.6.3
+
+# Variables de entorno
 python-dotenv==1.0.1 
