--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,10 @@ python-dateutil==2.8.2
 tzlocal==5.2
 
 # Variables de entorno
-python-dotenv==1.0.1 
+python-dotenv==1.0.1
+
+# Servidor WSGI para producción
+gunicorn==21.2.0
+
+# Gestión de logs
+loguru==0.7.2 
