[VC - Cursor] feat: Add support for Google OAuth environment variables

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ LOG_PATH=logs/
 
 # Tiempo de expiración de sesión (en segundos)
 SESSION_LIFETIME=86400  # 24 horas 
+
+GOOGLE_CLIENT_ID=tu_client_id_de_google
+GOOGLE_CLIENT_SECRET=tu_client_secret_de_google
+GOOGLE_REDIRECT_URI=https://tu-dominio.com  # o http://localhost:5000 para desarrollo local 
