[VC - Cursor] feat: Add browser-less authentication for production environments

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Configuración de Flask
 FLASK_APP=app.py
-FLASK_ENV=production  # Cambiar a 'development' para desarrollo local
+FLASK_ENV=production  # Cambiar a 'development' para desarrollo local con autenticación mediante navegador
 
 # Clave secreta para Flask (CAMBIAR EN PRODUCCIÓN)
 SECRET_KEY=your_secure_random_key_here
