--- a/.env.example
+++ b/.env.example
@@ -19,4 +19,5 @@ SESSION_LIFETIME=86400  # 24 horas
 
 GOOGLE_CLIENT_ID=tu_client_id_de_google
 GOOGLE_CLIENT_SECRET=tu_client_secret_de_google
-GOOGLE_REDIRECT_URI=https://tu-dominio.com  # o http://localhost:5000 para desarrollo local 
+# URL de redirección OAuth (debe coincidir exactamente con lo configurado en Google Cloud)
+GOOGLE_REDIRECT_URI=https://tu-dominio.com/oauth2callback 
