[VC - Cursor + Gemini] Adds cache config in WSGI and NGINX

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ FLASK_APP=app.py
 FLASK_ENV=production  # Cambiar a 'development' para desarrollo local con autenticación mediante navegador
 
 # Clave secreta para Flask (CAMBIAR EN PRODUCCIÓN)
-SECRET_KEY=your_secure_random_key_here
+SECRET_KEY=generate_a_secure_random_key_here
 
 # Configuración del servidor
 HOST=0.0.0.0
@@ -15,9 +15,14 @@ LOG_FORMAT={time:YYYY-MM-DD HH:mm:ss} | {level} | {message}
 LOG_PATH=logs/
 
 # Tiempo de expiración de sesión (en segundos)
-SESSION_LIFETIME=86400  # 24 horas 
+SESSION_LIFETIME=3600  # 1 hora
 
-GOOGLE_CLIENT_ID=tu_client_id_de_google
-GOOGLE_CLIENT_SECRET=tu_client_secret_de_google
+# Configuración para prevenir problemas de sesión y caché
+DISABLE_CACHE=true     # Añadido para controlar comportamiento de caché
+SESSION_STORAGE=filesystem
+
+# Credenciales de Google OAuth (configurar tus valores)
+GOOGLE_CLIENT_ID=your_client_id_here
+GOOGLE_CLIENT_SECRET=your_client_secret_here
 # URL de redirección OAuth (debe coincidir exactamente con lo configurado en Google Cloud)
-GOOGLE_REDIRECT_URI=https://tu-dominio.com/oauth2callback 
+GOOGLE_REDIRECT_URI=https://your-domain.com/oauth2callback 
