--- a/nginx-config.conf
+++ b/nginx-config.conf
@@ -5,16 +5,49 @@ server {
     access_log /var/log/nginx/calendar-app-access.log;
     error_log /var/log/nginx/calendar-app-error.log;
 
+    # Deshabilitar completamente todo tipo de caché
+    add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+    add_header Pragma "no-cache";
+    add_header Expires "0";
+    
+    # Prevenir caching en navegadores antiguos
+    expires -1;
+    
+    # Configurar para que cada petición sea única
+    add_header Last-Modified $date_gmt;
+
     location / {
         proxy_pass http://127.0.0.1:5000;  # Puerto donde se ejecuta Gunicorn
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Asegurar que no se cacheen las respuestas a nivel de proxy
+        proxy_no_cache 1;
+        proxy_cache_bypass 1;
+        
+        # Pasar headers de control de caché
+        proxy_pass_header Cache-Control;
+        proxy_pass_header Pragma;
+        proxy_pass_header Expires;
+        
+        # No almacenar buffering
+        proxy_buffering off;
     }
 
     location /static {
         alias /path/to/your/app/static;  # Cambiar por la ruta real
-        expires 30d;
+        
+        # Permitir caché sólo para recursos estáticos excepto JS
+        location ~* \.(?:css|jpg|jpeg|gif|png|ico|svg)$ {
+            expires 7d;
+        }
+        
+        # No cachear JavaScript
+        location ~* \.js$ {
+            add_header Cache-Control "no-store, no-cache, must-revalidate";
+            expires -1;
+        }
     }
 } 
