--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,8 @@ python-dotenv==1.0.1
 gunicorn==21.2.0
 
 # Gestión de logs
-loguru==0.7.2 
+loguru==0.7.2
+
+# Herramientas de prueba
+pytest==7.4.0
+pytest-cov==4.1.0 
